--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
