--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.12.0",
+    "react-easy-chart": "^1.0.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-scrollspy": "^3.4.2",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
