--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-easy-chart": "^1.0.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "react-scrollspy": "^3.4.2",
     "react-vis": "^1.11.7"
   },
