--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.12.0",
     "react-easy-chart": "^1.0.0",
